Updated footer form title, added footer address lines, added label line height and removed top position

--- a/source/themes/custom/sata/styles/libraries/region/footer.scss
+++ b/source/themes/custom/sata/styles/libraries/region/footer.scss
@@ -212,19 +212,11 @@ $footer-bp-mobile: '<sm';
         label {
           color: $white;
           font-size: rem(14px);
+          line-height: rem(19px);
 
           a {
             @include link(solar, hover);
           }
-        }
-      }
-
-      .form-checkboxes {
-        input[type='checkbox']:checked + label:before,
-        input[type='checkbox']:not(:checked) + label:before,
-        input[type='checkbox']:checked + label:after,
-        input[type='checkbox']:not(:checked) + label:after {
-          top: -2px;
         }
       }
 
