--- a/docroot/modules/custom/sata_core/templates/block--footer-navigation-block.html.twig
+++ b/docroot/modules/custom/sata_core/templates/block--footer-navigation-block.html.twig
@@ -29,10 +29,24 @@
     <div{{ content_attributes }}>
       <section class="block-footer-navigation-block__footer-address-social-menu-container">
         <div class="block-footer-navigation-block__footer-address">
-          <p class="block-footer-navigation-block__footer-address-first">{{ content.address_line_1 }}</p>
-          <p class="block-footer-navigation-block__footer-address-second">{{ content.address_line_2 }}</p>
-          <p class="block-footer-navigation-block__footer-address-city">{{ content.address_line_3 }}</p>
-          <p class="block-footer-navigation-block__footer-address-phone"><a href="tel:{{ content.phone_raw }}">{{ content.phone }}</a></p>
+          {%  if content.address_line_1 %}
+            <p class="block-footer-navigation-block__footer-address-first">{{ content.address_line_1 }}</p>
+          {% endif %}
+          {%  if content.address_line_2 %}
+            <p class="block-footer-navigation-block__footer-address-second">{{ content.address_line_2 }}</p>
+          {% endif %}
+          {%  if content.address_line_3 %}
+            <p class="block-footer-navigation-block__footer-address-third">{{ content.address_line_3 }}</p>
+          {% endif %}
+          {%  if content.address_line_4 %}
+            <p class="block-footer-navigation-block__footer-address-fourth">{{ content.address_line_4 }}</p>
+          {% endif %}
+          {%  if content.address_line_5 %}
+            <p class="block-footer-navigation-block__footer-address-city">{{ content.address_line_5 }}</p>
+          {% endif %}
+          {%  if content.phone %}
+            <p class="block-footer-navigation-block__footer-address-phone"><a href="tel:{{ content.phone_raw }}">{{ content.phone }}</a></p>
+          {% endif %}
         </div>
         <div class="block-footer-navigation-block__footer-social-menu-wrapper">
           {{ content.social_menu }}
