updated footer check box top position

--- a/source/themes/custom/sata/styles/libraries/region/footer.scss
+++ b/source/themes/custom/sata/styles/libraries/region/footer.scss
@@ -227,6 +227,7 @@ $footer-bp-mobile: '<sm';
         input[type='checkbox']:not(:checked) + label:after {
           @include icon-styles;
           color: $type-dark;
+          top: 0;
         }
       }
 
