--- a/source/themes/custom/sata/styles/abstracts/mixins/_links.scss
+++ b/source/themes/custom/sata/styles/abstracts/mixins/_links.scss
@@ -26,7 +26,7 @@
   // Light overrides.
   @if $style == light {
     $color: $white;
-    $hover-color: $type-dark;
+    $hover-color: $primary-solar;
   }
 
   // Solar overrides.
