Added left/right chevron svgs, full--hero.js: changed pagination location, updated colors, layout, and position, added header shadow

--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -30,7 +30,6 @@ $mobile-menu-item-button-height: 7rem;
  * Region
  */
 .region-header {
-
   .mobile-close-icon {
     height: 2rem;
     width: 2rem;
@@ -51,6 +50,7 @@ $mobile-menu-item-button-height: 7rem;
   top: var(--admin-toolbar-height);
   width: 100%;
   z-index: $header-z-index;
+  box-shadow: 0 8px 28px -6px rgba(0, 0, 0, 0.15);
 
   &::after {
     background-color: $primary-emerald;
