--- a/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
@@ -82,12 +82,12 @@
 
     @include media('>md') {
       @include flex-x(justify-content, left);
-      @include flex-x(align-items, center);
+      @include flex-x(align-items, flex-start);
     }
   }
 
   .component-hero-slide__content-container {
-    background-color: $black;
+    background-color: $primary-emerald;
     box-sizing: border-box;
     margin: 0;
     max-width: 75%;
@@ -101,11 +101,11 @@
     @include media('>md') {
       filter: drop-shadow(0 0 1rem rgba(0, 0, 0, 0.75));
       max-width: 530px;
-      padding: 2.75rem 2rem 1.375rem;
+      padding: rem(47px) 2rem 1.375rem;
     }
 
     &::after {
-      background-color: $black;
+      background-color: $primary-emerald;
       position: absolute;
       content: '';
       width: 20vw;
@@ -133,19 +133,17 @@
       margin-bottom: 3rem;
 
       @include media('>md') {
-        margin-bottom: 0;
+        margin-bottom: rem(15px);
       }
 
       h2 {
         @include type-header(h4, light, included);
         text-transform: uppercase;
-        color: $primary-emerald;
         display: block;
         margin: 0;
 
         @include media('>md') {
           @include type-header(display-headline-4, light, included);
-          color: $primary-emerald;
           line-height: rem(48px);
           margin: 0;
         }
@@ -161,25 +159,18 @@
   }
 
   .component-hero-slide__link {
-    @include btn();
-    border: 1px solid $primary-emerald !important;
-  }
-
-  .component-hero-slide__footer:not(:empty) {
-    margin-top: 1rem;
+    @include btn(solar);
   }
 
   .component-hero-slide__footer {
     @include flex;
-    @include flex-x(flex-direction, row);
+    @include flex-x(flex-direction, column);
     @include flex-x(justify-content, space-between);
-    @include flex-x(align-items, center);
   }
 
   .component-hero-slide__button-container {
     @include flex;
     @include flex-x(flex-direction, row);
-    @include flex-x(justify-content, center);
     @include flex-x(align-items, center);
 
     align-self: stretch;
@@ -187,37 +178,29 @@
     .component-hero-slide__button {
       @include trbl();
 
-      background-color: $primary-emerald;
+      background-color: $primary-solar;
       background-size: rem(10px) rem(16px);
-      border: 1px solid $primary-emerald;
-      height: 100%;
-      min-width: rem(47px);
+      border: 1px solid $primary-solar;
+      color: $type-dark;
+      height: rem(49px);
+      min-width: rem(49px);
       margin: 0;
       padding: 0;
       opacity: 1;
       position: relative;
 
       &:hover {
-        background-color: $color-black;
-        border-color: $primary-emerald;
+        background-color: $white;
       }
 
       &.component-hero-slide__button-prev {
-        background-image: url('../../../icons/chevron-left-black.svg');
+        background-image: url('../../../icons/chevron-left.svg');
         margin-right: 1px;
-
-        &:hover {
-          background-image: url('../../../icons/chevron-left-molten-orange.svg');
-        }
       }
 
       &.component-hero-slide__button-next {
-        background-image: url('../../../icons/chevron-right-black.svg');
+        background-image: url('../../../icons/chevron-right.svg');
         margin-left: 1px;
-
-        &:hover {
-          background-image: url('../../../icons/chevron-right-molten-orange.svg');
-        }
       }
 
       &[aria-disabled='true'] {
@@ -229,19 +212,21 @@
 
   .component-hero-slide__pagination {
     display: none;
-    margin: 2rem 0 0;
 
     @include media('>md') {
       display: block;
+      position: relative !important;
+      text-align: left !important;
+      margin: 2rem 0 rem(23px);
     }
 
     .swiper-pagination-bullet {
       background: transparent;
-      border-color: $primary-emerald;
+      border-color: $primary-solar;
     }
 
     .swiper-pagination-bullet-active {
-      background: $primary-emerald;
+      background: $primary-solar;
     }
   }
 }
