--- a/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
@@ -74,11 +74,13 @@
   .component-hero-slide__inner {
     @include container($container-xl, 0, center, false);
     @include flex();
-    @include flex-x(justify-content, left);
+    @include flex-x(justify-content, center);
     @include flex-x(align-items, flex-end);
 
     color: $color-white;
     height: 100%;
+    max-width: rem(345px);
+    // filter: drop-shadow(0 0 1rem rgba(0, 0, 0, .75));
 
     @include media('>md') {
       @include flex-x(justify-content, left);
@@ -90,37 +92,32 @@
     background-color: $primary-emerald;
     box-sizing: border-box;
     margin: 0;
-    max-width: 75%;
+    max-width: 100%;
     padding: 1.625rem .875rem 1rem;
     position: relative;
+    clip-path: polygon(0 0, 100% 0, 100% 82%, 84% 100%, 0 100%);
+
+    &::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background-color: $primary-solar;
+      z-index: -1;
+      clip-path: polygon(100% 72%, 100% 80%, 100% 100%, 75% 100%);
+    }
 
     @include media('<=xs-plus') {
       max-width: 100%;
     }
 
     @include media('>md') {
-      filter: drop-shadow(0 0 1rem rgba(0, 0, 0, 0.75));
       max-width: 530px;
-      padding: rem(47px) 2rem 1.375rem;
-    }
+      padding: rem(47px) 2rem rem(158px);
+      clip-path: polygon(0 0, 100% 0, 100% 40%, 0 100%, 0 100%);
 
-    &::after {
-      background-color: $primary-emerald;
-      position: absolute;
-      content: '';
-      width: 20vw;
-      height: 100%;
-      top: 0;
-      right: -4rem;
-      z-index: 1 !important;
-      transform: skew(-14deg);
+      &::after {
+        clip-path: polygon(0 95%, 100% 35%, 100% 50%, 0% 100%);
 
-      @include media('<=md') {
-        right: -2.5rem;
-      }
-
-      @include media('<=xs-plus') {
-        content: none;
       }
     }
 
@@ -130,7 +127,7 @@
     }
 
     .component-hero-slide__title {
-      margin-bottom: 3rem;
+      margin-bottom: rem(22px);
 
       @include media('>md') {
         margin-bottom: rem(15px);
@@ -160,12 +157,26 @@
 
   .component-hero-slide__link {
     @include btn(solar);
+    padding: rem(10px 45px 8px) !important;
+    display: flex;
+    align-self: start;
+    order: 1;
+
+    @include media('<md') {
+      height: rem(49px);
+      margin-right: rem(8px);
+    }
   }
 
   .component-hero-slide__footer {
     @include flex;
-    @include flex-x(flex-direction, column);
-    @include flex-x(justify-content, space-between);
+    @include flex-x(flex-direction, row);
+    @include flex-x(align-items, center);
+    @include flex-x(flex-wrap, wrap);
+
+    @include media('>=md') {
+      @include flex-x(flex-direction, column);
+    }
   }
 
   .component-hero-slide__button-container {
@@ -174,6 +185,11 @@
     @include flex-x(align-items, center);
 
     align-self: stretch;
+    order: 2;
+
+    @include media('>=md') {
+      order: 3;
+    }
 
     .component-hero-slide__button {
       @include trbl();
@@ -183,7 +199,7 @@
       border: 1px solid $primary-solar;
       color: $type-dark;
       height: rem(49px);
-      min-width: rem(49px);
+      width: rem(49px);
       margin: 0;
       padding: 0;
       opacity: 1;
@@ -211,18 +227,28 @@
   }
 
   .component-hero-slide__pagination {
-    display: none;
+    display: block;
+    position: relative !important;
+    text-align: center !important;
+    margin: rem(7px) auto 0;
+    order: 3;
 
-    @include media('>md') {
-      display: block;
-      position: relative !important;
+    @include media('<md') {
+      width: 100%;
+    }
+
+    @include media('>=md') {
       text-align: left !important;
-      margin: 2rem 0 rem(23px);
+      margin-left: 0;
+      margin-right: 0;
+      order: 2;
     }
 
     .swiper-pagination-bullet {
       background: transparent;
       border-color: $primary-solar;
+      height: rem(12px);
+      width: rem(12px);
     }
 
     .swiper-pagination-bullet-active {
