--- a/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
@@ -79,13 +79,8 @@
 
     color: $color-white;
     height: 100%;
-    max-width: rem(345px);
-    // filter: drop-shadow(0 0 1rem rgba(0, 0, 0, .75));
-
-    @include media('>md') {
-      @include flex-x(justify-content, left);
-      @include flex-x(align-items, flex-start);
-    }
+    @include flex-x(justify-content, left);
+    @include flex-x(align-items, flex-start);
   }
 
   .component-hero-slide__content-container {
@@ -95,7 +90,7 @@
     max-width: 100%;
     padding: 1.625rem .875rem 1rem;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 82%, 84% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 40%, 0 100%, 0 100%);
 
     &::after {
       content: '';
@@ -103,22 +98,12 @@
       inset: 0;
       background-color: $primary-solar;
       z-index: -1;
-      clip-path: polygon(100% 72%, 100% 80%, 100% 100%, 75% 100%);
-    }
-
-    @include media('<=xs-plus') {
-      max-width: 100%;
+      clip-path: polygon(0 95%, 100% 35%, 100% 50%, 0% 100%);
     }
 
     @include media('>md') {
       max-width: 530px;
-      padding: rem(47px) 2rem rem(158px);
-      clip-path: polygon(0 0, 100% 0, 100% 40%, 0 100%, 0 100%);
-
-      &::after {
-        clip-path: polygon(0 95%, 100% 35%, 100% 50%, 0% 100%);
-
-      }
+      padding: rem(47px) rem(43px) rem(158px) rem(48px);
     }
 
     >* {
@@ -157,7 +142,6 @@
 
   .component-hero-slide__link {
     @include btn(solar);
-    padding: rem(10px 45px 8px) !important;
     display: flex;
     align-self: start;
     order: 1;
@@ -165,18 +149,15 @@
     @include media('<md') {
       height: rem(49px);
       margin-right: rem(8px);
+      min-width: rem(190px);
+      justify-content: center;
     }
   }
 
   .component-hero-slide__footer {
     @include flex;
-    @include flex-x(flex-direction, row);
-    @include flex-x(align-items, center);
+    @include flex-x(flex-direction, column);
     @include flex-x(flex-wrap, wrap);
-
-    @include media('>=md') {
-      @include flex-x(flex-direction, column);
-    }
   }
 
   .component-hero-slide__button-container {
@@ -186,6 +167,7 @@
 
     align-self: stretch;
     order: 2;
+    margin-top: rem(24px);
 
     @include media('>=md') {
       order: 3;
@@ -229,8 +211,9 @@
   .component-hero-slide__pagination {
     display: block;
     position: relative !important;
-    text-align: center !important;
-    margin: rem(7px) auto 0;
+    text-align: left !important;
+    margin-top: rem(7px);
+    margin-bottom: 0;
     order: 3;
 
     @include media('<md') {
@@ -238,10 +221,8 @@
     }
 
     @include media('>=md') {
-      text-align: left !important;
-      margin-left: 0;
-      margin-right: 0;
       order: 2;
+      margin-top: rem(32px);
     }
 
     .swiper-pagination-bullet {
@@ -249,6 +230,14 @@
       border-color: $primary-solar;
       height: rem(12px);
       width: rem(12px);
+
+      &:not(:last-of-type) {
+        margin-right: rem(12px);
+      }
+
+      &:first-of-type {
+        margin-left: 0;
+      }
     }
 
     .swiper-pagination-bullet-active {
