Updated local css/js minify and compression, updated header page padding and hero height and image heights

--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -1180,14 +1180,14 @@ $mobile-menu-item-button-height: 7rem;
 .page {
   padding-top: $header-height-mobile;
 
-  @include media('>=lg') {
+  @include media('>=xl') {
     padding-top: $header-height;
   }
 
   body.page-node-type-landing-page & {
     padding-top: $header-height-mobile;
 
-    @include media('>=lg') {
+    @include media('>=xl') {
       padding-top: $header-height;
     }
   }
