--- a/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
@@ -27,6 +27,10 @@
   width: 100vw !important;
 
   @include media('<md') {
+    height: rem(795px);
+  }
+
+  @include media('<xs') {
     height: rem(715px);
   }
 
@@ -59,6 +63,14 @@
           width: auto;
           object-fit: cover;
         }
+      }
+
+      @include media('>=xs') {
+        height: rem(350px);
+      }
+
+      @include media('>=sm') {
+        height: rem(360px);
       }
 
       @include media('>md') {
