--- a/source/themes/custom/sata/styles/abstracts/variables/_header.scss
+++ b/source/themes/custom/sata/styles/abstracts/variables/_header.scss
@@ -9,6 +9,8 @@ $header-logo-height: 1.25rem;
 $header-logo-performance-height-large: 1.75rem;
 $header-logo-height-mobile: 1.25rem;
 
-$header-height-large: $header-padding + $header-padding + $header-logo-height +  $header-logo-performance-height-large;
-$header-height: $header-padding + $header-padding + $header-logo-height;
+$header-height-large: 7.5rem;
+$header-height: 7.5rem;
+$header-utility-nav-height: 2.5rem;
+$header-branding-height: $header-height - $header-utility-nav-height;
 $header-height-mobile: $header-padding-mobile + $header-padding-mobile + $header-logo-height-mobile;
