--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -70,11 +70,65 @@ $mobile-menu-item-button-height: 7rem;
     @include container();
     @include flex;
     @include flex-x(align-items, center);
-    @include flex-x(flex-wrap, nowrap);
+    @include flex-x(flex-wrap, wrap);
     @include flex-x(justify-content, space-between);
 
     height: $header-height;
     padding: 0;
+  }
+
+  .header--utility-nav {
+    @include flex;
+    @include flex-x(align-items, center);
+    @include flex-x(justify-content, flex-end);
+
+    position: relative;
+    background-color: $white;
+    height: $header-utility-nav-height;
+    width: 100%;
+    color: $primary-emerald;
+    font-weight: $fw-extra-bold;
+    font-family: $font-brand;
+    line-height: rem(24px);
+
+    // Full width Bleed Element
+    &::before,
+    &::after {
+      background-color: $white;
+      position: absolute;
+      content: '';
+      width: 100vw;
+      height: 100%;
+      top: 0;
+      left: -100vw;
+      z-index: -1;
+    }
+
+    &::after {
+      left: unset;
+      right: -100vw;
+    }
+
+    .menu--header-utility-nav {
+      margin: 0 0 0 rem(20px);
+
+      a {
+        color: $primary-emerald;
+        font-weight: $fw-extra-bold;
+        font-family: $font-brand;
+        line-height: rem(24px);
+        text-decoration: none;
+
+        &:hover,
+        &:focus {
+          text-decoration: underline;
+        }
+      }
+    }
+
+    @include media('<xl') {
+      display: none;
+    }
   }
 
   .block--header-branding {
@@ -82,7 +136,7 @@ $mobile-menu-item-button-height: 7rem;
     @include flex-x(align-items, center);
 
     background-color: $primary-emerald;
-    height: 100%;
+    height: $header-branding-height;
     padding-right: rem(34px);
     position: relative;
 
@@ -494,7 +548,7 @@ $mobile-menu-item-button-height: 7rem;
 
   .block--header-search {
     display: flex;
-    padding-left: 1.5rem;
+    padding-left: 0;
 
     &.contextual-region {
       position: unset;
@@ -508,7 +562,7 @@ $mobile-menu-item-button-height: 7rem;
       border: 0;
       display: flex;
       font-weight: $fw-bold;
-      height: $header-height;
+      height: $header-utility-nav-height;
       margin-left: 10px;
       position: relative;
 
@@ -580,7 +634,7 @@ $mobile-menu-item-button-height: 7rem;
       }
 
       &:hover {
-        box-shadow: 0 -12px 0 0 $primary-dark inset;
+        color: $type-dark;
       }
     }
 
@@ -668,7 +722,7 @@ $mobile-menu-item-button-height: 7rem;
         @include flex-x(align-items, center);
         @include flex-x(justify-content, center);
 
-        height: $header-height;
+        height: $header-branding-height;
         margin: 0;
         padding-left: rem(15px);
         padding-right: rem(15px);
@@ -911,12 +965,14 @@ $mobile-menu-item-button-height: 7rem;
     }
 
     .region-header__content {
+      @include flex-x(flex-wrap, nowrap);
       width: 100%;
       height: $header-height-mobile;
     }
 
     .block--header-branding {
       @include flex-x(order, 0);
+      height: 100%;
     }
 
     .block--header-menu-main {
