--- a/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
+++ b/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
@@ -34,7 +34,8 @@
   {% endif %}
   {{ title_suffix }}
 
-  <button class="block__content-toggle" aria-controls="header-search-menu--content" aria-expanded="false"> Text
+  <button class="block__content-toggle" aria-controls="header-search-menu--content" aria-expanded="false">
+    <span class="block__content-label">{{ 'Search'|t }}</span>
     <span class="block__content-toggle-expand" title="{{ 'Open Header Search Bar'|t }}">{{ 'Open Header Search Bar'|t }}</span>
     <span class="block__content-toggle-collapse" title="{{ 'Close Header Search Bar'|t }}">{{ 'Close Header Search Bar'|t }}</span>
   </button>
