Restructured utility nav - added region with template, stylesheet and js, and removed module, reversed header styling changes, changed header size variables

--- a/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
+++ b/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
@@ -25,9 +25,7 @@
  * @see template_preprocess_block()
  */
 #}
-{% set classes = ['block--header-search'] %}
-
-<section{{ attributes.addClass(classes) }} id="headerutilitynavsearch">
+<section{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
     <header{{ title_attributes }}>{{ label }}Search</header>
