Updated utility area js and added hide/ease in css,

--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -1180,7 +1180,7 @@ $mobile-menu-item-button-height: 7rem;
 
   // Hides header when scroll up
   &.region-header--hide {
-    top: -$header-height;
+    top: -$header-height - $header-utility-nav-height;
   }
 
   &.region-header--ease-in-out {
