Updated placeholder text and added search icon to search bar, updated header js search button, updated utility area search js and css,

--- a/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
+++ b/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
@@ -40,7 +40,8 @@
 
   <div{{ content_attributes.setAttribute('id', 'header-search--content') }}>
     <form action="/search" method="GET">
-      <input type="text" name="search" placeholder="{{ 'Search sata.com'|t }}" />
+      <input type="text" name="search" placeholder="{{ 'Search SATA'|t }}" />
+      {% include directory ~ '/icons/search.svg' %}
     </form>
   </div>
 
