changed search placeholder text.

--- a/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
+++ b/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
@@ -40,7 +40,7 @@
 
   <div{{ content_attributes.setAttribute('id', 'header-search--content') }}>
     <form action="/search" method="GET">
-      <input type="text" name="search" placeholder="{{ 'Search SATA'|t }}" />
+      <input type="text" name="search" placeholder="{{ 'Type something'|t }}" />
       {% include directory ~ '/icons/search.svg' %}
     </form>
   </div>
