--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -970,7 +970,8 @@ $mobile-menu-item-button-height: 7rem;
 
       .menu--depth-0 {
         background-color: $white;
-        padding: rem(15px) 0;
+        padding: rem(15px) 0 0;
+        margin-bottom: rem(15px);
       }
 
       .menu__content-container {
@@ -992,9 +993,10 @@ $mobile-menu-item-button-height: 7rem;
             @include flex-x(align-items, center);
             @include icon('arrow', after, false);
             color: $type-dark;
+            width: 1.5rem;
 
             &:after {
-              font-size: 1rem;
+              font-size: rem(13px);
             }
 
             .menu-item__button-collapse,
@@ -1110,14 +1112,13 @@ $mobile-menu-item-button-height: 7rem;
 
         .mobile-search {
           font-size: 16px;
-          margin-bottom: 10px;
           width: 96%;
 
           .search-input-set {
             align-items: center;
             display: flex;
             height: 48px;
-            margin: 10px 4%;
+            margin: rem(15px) 4% 0;
             width: 96%;
           }
 
@@ -1125,9 +1126,19 @@ $mobile-menu-item-button-height: 7rem;
             background-color: $white;
             border: 0;
             display: flex;
-            font-weight: $fw-bold;
+            font-family: $font-default;
+            font-weight: $fw-regular;
+            color: $black;
             height: 48px;
-            padding-left: 15px;
+            padding-left: 10px;
+
+            &::placeholder {
+              opacity: 1;
+              font-family: $font-default;
+              font-weight: $fw-regular;
+              font-size: rem(16px);
+              color: $black;
+            }
           }
 
           .search-icon,
@@ -1137,11 +1148,12 @@ $mobile-menu-item-button-height: 7rem;
             height: 48px;
             width: 48px;
 
-            &:before {
+            &::before {
               display: block;
-              font-size: 20px;
+              color: $black;
+              font-size: rem(14px);
               position: relative;
-              right: -5px;
+              right: -20px;
               top: 12px;
             }
           }
@@ -1156,10 +1168,25 @@ $mobile-menu-item-button-height: 7rem;
           }
 
           button.btn {
-            background-color: $primary-dark;
-            color: $white;
-            margin: 10px 4%;
+            @include btn(solar);
+            margin: 15px 4% 0;
             width: 96%;
+          }
+        }
+
+        &.menu-item--depth-0__background {
+          border-bottom: unset;
+          background-color: $primary-emerald;
+          margin: 0;
+        }
+
+        &.menu-item--depth-0__button {
+          margin-top: rem(10px);
+
+          .menu-item__link {
+            @include btn(light);
+            width: 100%;
+            margin: rem(15px 15px 0);
           }
         }
       }
