--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -1112,14 +1112,15 @@ $mobile-menu-item-button-height: 7rem;
 
         .mobile-search {
           font-size: 16px;
-          width: 96%;
+          width: 100%;
+          padding: rem(0 15px);
 
           .search-input-set {
             align-items: center;
             display: flex;
             height: 48px;
-            margin: rem(15px) 4% 0;
-            width: 96%;
+            margin-top: rem(15px);
+            width: 100%;
           }
 
           input {
@@ -1169,8 +1170,8 @@ $mobile-menu-item-button-height: 7rem;
 
           button.btn {
             @include btn(solar);
-            margin: 15px 4% 0;
-            width: 96%;
+            margin-top: rem(15px);
+            width: 100%;
           }
         }
 
